change background to be a kiwi looking them--- might change it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js">
   <link rel="stylesheet" href="style.css">
 
-  <title>Boiler Plate</title>
+  <title>Quote Generator ❞</title>
 </head>
 
 <body>
