--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Boiler Plate">
   <meta name="author" content="AlexFromPalmSprings">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
   <link rel="stylesheet" href="style.css">
 
   <title>Quote Generator ❞</title>
 </head>
 
 <body>
+  <div class="quote-container" id="quote-container">
+    <!-- Quote -->
+    <div class="quote-text">
+      <i class="fas fa-quote-left"></i>
+      <span id="quote">Just a sample quote that we have for now. We are going to have something awesome here
+        soon...</span>
+    </div>
+    <!-- Author -->
+    <div class="quote-author">
+      <span id="author">- AlexFromPalmSprings</span>
+    </div>
+    <!-- Buttons -->
+    <div class="button-container">
+      <button class="twitter-button" id="twitter" title="TWEET THIS NOW!">
+        <i class="fab fa-twitter"></i>
+      </button>
+
+      <button id="new-quote">New Quote</button>
+    </div>
+
+
+
+
+
+  </div>
+
   <script src="scripts.js"></script>
 </body>
 
