buttons look much cooler now

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Boiler Plate">
   <meta name="author" content="AlexFromPalmSprings">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
   <link rel="stylesheet" href="style.css">
 
   <title>Quote Generator ❞</title>
@@ -27,13 +27,11 @@
     </div>
     <!-- Buttons -->
     <div class="button-container">
-      <button class="twitter-button" id="twitter" title="TWEET THIS NOW!">
+      <button class="twitter-button" id="twitter" title="Tweet This!">
         <i class="fab fa-twitter"></i>
       </button>
-
       <button id="new-quote">New Quote</button>
     </div>
-
 
 
 
