--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <!-- Quote -->
     <div class="quote-text">
       <i class="fas fa-quote-left"></i>
-      <span id="quote">Just a sample quote that we have for now. We are going to have something awesome here
-        soon...</span>
+      <span id="quote"></span>
     </div>
     <!-- Author -->
     <div class="quote-author">
-      <span id="author">- AlexFromPalmSprings</span>
+      <span id="author"></span>
     </div>
     <!-- Buttons -->
     <div class="button-container">
