create div and style for the loader

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       </button>
       <button id="new-quote">New Quote</button>
     </div>
-
+    <!-- loader -->
+    <div class="loader" id="loader"></div>
 
 
 
